[Thiago] NA fixes gap between images in special pages

--- a/themes/main/src/sass/static_special.scss
+++ b/themes/main/src/sass/static_special.scss
@@ -88,6 +88,7 @@ main.special {
     position: relative;
     z-index: 3;
     img {
+      display: block;
       width: 100%;
     }
   }
